# sourcebox-omni-local

./: .gitignore  DOCUMENTATION.md  README.md  agent.py  json_test.py  mcp_stdio_probe.py  pc_restart_test.py  pc_shutdown_test.py  pyproject.toml  requirements.txt  steam_test.py  test.py  test2.py  test_timer.py
agent_tools/: close_app_by_name_tool.py  close_app_tool.py  document_loader_tool.py  editor_tool.py  file_browser_tool.py  file_ops_tool.py  game_launcher_tool.py  image_description_tool.py  image_gen_tool.py  launch_app_tool.py  pdf_query_tool.py  pdf_summary_tool.py  screenshot_tool.py  shell_tool.py  system_info_tool.py  timer_tool.py  wallpaper_tool.py  web_search_tool.py  webpage_extraction_tool.py
agent_tools/flet_timer_tool/: README.md  alarm_sound.py  main.py  requirements.txt
flet_ui/: README.md  agent.py  gui_agent.py  launcher.py  main.py  settings.py
src/: main.py  requirements.txt  settings.py  test_mcp_client.py  test_mcp_http_client.py
